--- a/front/assets/style.css
+++ b/front/assets/style.css
@@ -110,3 +110,20 @@ body {
   #chat-add button:hover {
     background-color: #007bff;
   }
+
+  #feedback {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    display: none;
+  }
+  
+  #feedback p {
+    margin: 5px;
+  }
+  
+  #feedback button {
+    font-size: 1.5rem;
+    margin: 5px;
+    cursor: pointer;
+  }
